@@ -1,10 +1,16 @@
+2011-03-28  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdMZ.c (Tcl_RegexpObjCmd, Tcl_RegsubObjCmd): Use the
+	error messages generated by the variable management code rather than
+	creating our own.
+
 2011-03-27  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclBasic.c (TclNREvalObjEx): fix performance issue,
 	notably apparent in tclbench's "LIST lset foreach". Many thanks to
 	twylite for patiently researching the issue and explaining it to
 	me: a missing Tcl_ResetObjResult that causes unwanted sharing of
-	the current result Tcl_Obj. 
+	the current result Tcl_Obj.
 
 2011-03-26  Donal K. Fellows  <dkf@users.sf.net>
 
